--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="action_settings">Settings</string>
-    <string name="corpus">Corpus</string>
+    <string name="nav_corpus">Corpus</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
-    <string name="recognize">Recognize</string>
+    <string name="nav_recognize">Recognize</string>
     <string name="recognized_command">None</string>
     <string name="recognized_command_legend">"Recognized command : "</string>
     <string name="text_empty">There are no commands in corpus.</string>
-    <string name="title_activity_drawer">Home</string>
+    <string name="about1">This application is used to record a corpus of commands, which will be used to pilot a drone. The commands are recorded in *wav format. The app also allows the user to test the vocal recognition, on the recorded corpus.</string>
+    <string name="about2">This application was developped for a project made during a Master IHM at Paul Sabatier University, by Julien Soula, Benjamin Saint-Sever, Safwan Al Masri, Paul Givel.</string>
+    <string name="nav_about">About</string>
 </resources>
