--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -7,7 +7,9 @@
     <string name="recognized_command">Aucune</string>
     <string name="recognized_command_legend">"Commande reconnue : "</string>
     <string name="text_empty">Il n\'y a pas de commande dans le corpus.</string>
-    <string name="title_activity_drawer">Accueil</string>
-    <string name="corpus">Corpus</string>
-    <string name="recognize">Reconnaître</string>
+    <string name="nav_corpus">Corpus</string>
+    <string name="nav_recognize">Reconnaître</string>
+    <string name="about1">Cette application sert à enregistrer un corpus de commandes, qui sera utilisé pour commander un drone. Les commandes sont enregistrées au format *.wav . L\'application propose de plus de tester la reconnaissance vocale, sur le corpus enregistré.</string>
+    <string name="about2">Cette application a été développée pour un projet de Master1 IHM à l\'Université Paul Sabatier, par Julien Soula, Benjamin Saint-Sever, Safwan Al Masri, Paul Givel.</string>
+    <string name="nav_about">À propos</string>
 </resources>
