--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,7 +27,11 @@
     <string name="nav_corpus">Corpus</string>
     <string name="nav_recognize">Recognize</string>
     <string name="nav_tmp" translatable="false">tmp</string>
-    <string name="about1">This application is used to record a corpus of commands, which will be used to pilot a drone. The commands are recorded in *wav format. The app also allows the user to test the vocal recognition, on the recorded corpus.</string>
+    <string name="about1">This application is used to record a corpus of commands, which will be used to pilot a drone. The commands are recorded in *wav format, on the external storage. The app also allows the user to test the vocal recognition, on the recorded corpus.</string>
     <string name="about2">This application was developped for a project made during a Master IHM at Paul Sabatier University, by Julien Soula, Benjamin Saint-Sever, Safwan Al Masri, Paul Givel.</string>
     <string name="nav_about">About</string>
+    <string name="file">File </string>
+    <string name="created"> created.</string>
+    <string name="file_ext" translatable="false">.wav</string>
+    <string name="temp_file" translatable="false">record_temp.raw</string>
 </resources>
