fix exception dans Recognize

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="recognized_command_legend">Recognized command : </string>
+    <string name="recognized_command_legend">"Recognized command : "</string>
     <string name="recognized_command">None</string>
     <string name="text_empty">There are no commands in corpus.</string>
     <string name="nav_corpus">Corpus</string>
@@ -13,8 +13,8 @@
     <string name="about1">This application is used to record a corpus of commands, which will be used to pilot a drone. The commands are recorded in *wav format, on the external storage. The app also allows the user to test the vocal recognition, on the recorded corpus.</string>
     <string name="about2">This application was developed for a project made during a Master IHM at Paul Sabatier University, by Julien Soula, Benjamin Saint-Sever, Safwan Al Masri, Paul Givel.</string>
     <string name="nav_about">About</string>
-    <string name="file">File </string>
-    <string name="created"> created.</string>
+    <string name="file">\"File \"</string>
+    <string name="created">\" created.\"</string>
     <string name="file_ext" translatable="false">.wav</string>
     <string name="temp_file" translatable="false">record_temp.raw</string>
 
